added stuff to developer branch

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<%= render 'layouts/nav' %>
 <%= yield %>
+<%= render 'layouts/img' %>
+<%= render 'layouts/footer' %>
 
 </body>
 </html>
